--- a/index.html
+++ b/index.html
@@ -5,8 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="./style.css" />
-    <script defer src="./script.js"></script>
-
+    <script src="./script.js"></script>
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css"
       rel="stylesheet"
@@ -27,36 +26,23 @@
   <body>
     <!--main slide presentation-->
     <div class="slider__body" id="slider_testing">
-      <!--SLIDER TRAILER VALET VIDEO-->
-      <div class="slider video">
-        <video autoplay muted loop id="autoplayVideo">
-          <source
-            src="./img_products/trailer_valet/trailer_valet_video/Trailer_Valet_XL_Mover_Promo_Video.mp4"
-            type="video/mp4"
-          />
-        </video>
-      </div>
-
+      
       <!--SLIDER 0 TRAILER VALET-->
       <div class="slider">
         <div class="container__slidse">
           <div class="price">&#x24;219.<small>94</small></div>
           <div class="img__in__slider">
-            <img
-              class="trailer_valet"
+            <img class="trailer_valet"
               src="./img_products/trailer_valet/tvdjx2s/tvdjx2s.webp"
               alt="Image 1"
             />
           </div>
-          <div class="product__description">
-            2,000 lbs Center Mounted Drill Jack
-            <div><b class="valet_desctiption">Trailer Valet</b></div>
-            #TVDJX2C
-          </div>
+          <div class="product__description">2,000 lbs Center Mounted Drill Jack <div ><b class="valet_desctiption">Trailer Valet</b></div>#TVDJX2C</div>
         </div>
       </div>
+    <!--SLDER 1 BRAKE PAD SPREADER-->
 
-      <!--SLDER 1 BRAKE PAD SPREADER-->
+    
       <div class="slider">
         <div class="container__slidse">
           <div class="price">&#x24;9.<small>49</small></div>
@@ -69,14 +55,12 @@
           <div class="product__description">BRAKE PAD SPREADER #24400</div>
         </div>
       </div>
-
       <!--SLDER 2 KLEEN-FLO-->
       <div class="slider">
         <div class="container__slidse">
           <div class="price">&#x24;3.<small>49</small></div>
           <div class="img__in__slider">
-            <img
-              class="for_rotate"
+            <img class="for_rotate"
               src="./img_products/kleen_flo/kleen_flo_313.png"
               alt="Image 1"
             />
@@ -86,11 +70,10 @@
           </div>
         </div>
       </div>
-
       <!--SLDER 3 GREASE MONKEY GLOVES-->
       <div class="slider">
         <div class="container__slidse">
-          <div class="price">&#x24;20</div>
+          <div class="price">&#x24;20.<small></small></div>
           <div class="img__in__slider">
             <img
               class="slider__2__img"
@@ -107,7 +90,7 @@
       <!--SLDER 3 BOSH QUIETCAST BRAKES-->
       <div class="slider">
         <div class="container__slidse">
-          <div class="price">&#x24;60</div>
+          <div class="price">&#x24;60.<small>00</small></div>
           <div class="img__in__slider">
             <img
               class="slider__2__img"
@@ -124,26 +107,51 @@
 
     <!--footer-->
 
-    <div class="container_footer">
-      <div class="footer_text">
-        <img
-          class="footer_logo"
-          src="./img_products/logo/logo.png"
-          alt="logo"
-        /><br />
-        Location: 220 Transport Road<br />
-        Contact: (204) 560-3460
-      </div>
-      <div class="footer_text">
-        We specialize in providing high-quality auto parts for all makes and
-        models. Our extensive inventory ensures that you'll find the right part
-        for your vehicle.
-      </div>
-      <div class="footer_text">
-        Our knowledgeable staff is here to assist you with expert advice and
-        recommendations. We believe in building lasting relationships with our
-        customers.
-      </div>
-    </div>
+  <div class="container_footer"> 
+  
+    <div class="footer_text">
+      <img class="footer_logo" src="./img_products/logo/logo.png" alt="logo"><br>
+      Location: 220 Transport Road<br>
+      Contact: (204) 560-3460</div>
+    <div class="footer_text">We specialize in providing high-quality auto parts for all makes and models.
+      Our extensive inventory ensures that you'll find the right part for your vehicle.
+     </div>
+    <div class="footer_text">Our knowledgeable staff is here to assist you with expert advice and recommendations.
+      We believe in building lasting relationships with our customers.
+     </div>
+  </div>
+
   </body>
 </html>
+
+<!--Slide Title: CTR Auto Parts - Retailing Excellence
+
+Slide Content:
+
+Welcome to CTR Auto Parts!
+
+Location: 220 Transport Road
+Contact: (204) 560-3460
+About Us:
+
+We specialize in providing high-quality auto parts for all makes and models.
+Our extensive inventory ensures that you'll find the right part for your vehicle.
+Why Choose CTR Auto Parts?
+
+Wide Selection:
+
+We carry a vast range of auto parts, including engines, brakes, filters, and more.
+From domestic to import vehicles, we have you covered.
+Superior Quality:
+
+We source our parts from reputable manufacturers to ensure reliability.
+Your safety and satisfaction are our top priorities.
+Exceptional Service:
+
+Our knowledgeable staff is here to assist you with expert advice and recommendations.
+We believe in building lasting relationships with our customers.
+Visit Us Today!
+
+Address: 220 Transport Road
+Phone: (204) 560-3460
+
