--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
           <div class="img__in__slider">
             <img
               class="trailer_valet"
-              src="./img_products/trailer_valet/tvdjx2s/tvdjx2s.webp"
+              src="./img_products/trailer_valet/trailer_valet_video/WhatsApp Video 2023-06-12 at 20.44.57.mp4"
               alt="Image 1"
             />
           </div>
