--- a/index.html
+++ b/index.html
@@ -108,16 +108,17 @@
     <!--footer-->
 
   <div class="container_footer"> 
-  
-    <div class="footer_text">
-      <img class="footer_logo" src="./img_products/logo/logo.png" alt="logo"><br>
-      Location: 220 Transport Road<br>
+    <div class="footer_text"><div>220 Transport Road<br>
       Contact: (204) 560-3460</div>
-    <div class="footer_text">We specialize in providing high-quality auto parts for all makes and models.
-      Our extensive inventory ensures that you'll find the right part for your vehicle.
      </div>
-    <div class="footer_text">Our knowledgeable staff is here to assist you with expert advice and recommendations.
-      We believe in building lasting relationships with our customers.
+
+    <div class="footer_text"><div>
+      <img class="footer_logo" src="./img_products/logo/logo.png" alt="logo"><br></div>
+      </div>
+    
+    <div class="footer_text">
+<div>
+      <img class="qr" src="./img_products/qr/logoQr.jpg" alt="asd"></div>
      </div>
   </div>
 
