--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
       <!--SLDER 3 GREASE MONKEY GLOVES-->
       <div class="slider">
         <div class="container__slidse">
-          <div class="price">&#x24;20.<small></small></div>
+          <div class="price">&#x24;20<small></small></div>
           <div class="img__in__slider">
             <img
               class="slider__2__img"
@@ -90,7 +90,7 @@
       <!--SLDER 3 BOSH QUIETCAST BRAKES-->
       <div class="slider">
         <div class="container__slidse">
-          <div class="price">&#x24;60.<small>00</small></div>
+          <div class="price">&#x24;60<small></small></div>
           <div class="img__in__slider">
             <img
               class="slider__2__img"
