--- a/index.html
+++ b/index.html
@@ -26,6 +26,43 @@
   <body>
     <!--main slide presentation-->
     <div class="slider__body" id="slider_testing">
+      <!--SLIDER TRAILER VALET 1-->
+      <div class="slider">
+        <div class="container__slidse">
+          <div class="price">&#x24;673.<small>56</small></div>
+          <div class="img__in__slider">
+            <img
+              class="trailer_valet"
+              src="./img_products/trailer_valet/tv5x/tv5x.png"
+              alt="Image 1"
+            />
+          </div>
+          <div class="product__description">
+            Tongue Jack Dolly with Crank Assist, 500 lb. Tongue / 5,000 lb.
+            <div><b class="valet_desctiption">Trailer Valet</b></div>
+            #TV5X
+          </div>
+        </div>
+      </div>
+
+      <!--SLIDER TRAILER VALET 2-->
+      <div class="slider">
+        <div class="container__slidse">
+          <div class="price">&#x24;219.<small>94</small></div>
+          <div class="img__in__slider">
+            <img
+              class="trailer_valet"
+              src="./img_products/trailer_valet/tvdjx2s/tvdjx2s.webp"
+              alt="Image 1"
+            />
+          </div>
+          <div class="product__description">
+            2,000 lbs Center Mounted Drill Jack
+            <div><b class="valet_desctiption">Trailer Valet</b></div>
+            #TVDJX2C
+          </div>
+        </div>
+      </div>
       <!--SLIDER 0 TRAILER VALET-->
       <div class="slider">
         <div class="container__slidse">
