--- a/index.html
+++ b/index.html
@@ -38,8 +38,9 @@
             />
           </div>
           <div class="product__description">
-            Tongue Jack Dolly with Crank Assist, 500 lb. Tongue / 5,000 lb.
             <div><b class="valet_desctiption">Trailer Valet</b></div>
+            Tongue Jack Dolly with Crank Assist, 500 lb. <br />Tongue / 5,000
+            lb. <br />
             #TV5X
           </div>
         </div>
@@ -57,9 +58,8 @@
             />
           </div>
           <div class="product__description">
-            2,000 lbs Center Mounted Drill Jack
             <div><b class="valet_desctiption">Trailer Valet</b></div>
-            #TVDJX2C
+            2,000 lbs Center Mounted Drill Jack <br />#TVDJX2C
           </div>
         </div>
       </div>
