--- a/index.html
+++ b/index.html
@@ -29,11 +29,13 @@
       <!--SLIDER TRAILER VALET 1-->
       <div class="slider">
         <div class="container__slidse">
-          <div class="price">&#x24;673.<small>56</small></div>
+          <div class="price">
+            <div class="price_div">&#x24;673.<small>56</small></div>
+          </div>
           <div class="img__in__slider">
             <img
               class="trailer_valet"
-              src="./img_products/trailer_valet/tv5x/tv5x.png"
+              src="./img_products/trailer_valet/tv5x/7839fc87-3c9d-42f6-88f6-dc58bf3e8779.eae3dda5f19ab080e734d7640d264e1b.jpeg"
               alt="Image 1"
             />
           </div>
@@ -49,17 +51,19 @@
       <!--SLIDER TRAILER VALET 2-->
       <div class="slider">
         <div class="container__slidse">
-          <div class="price">&#x24;219.<small>94</small></div>
+          <div class="price">
+            <div class="price_div">&#x24;219.<small>94</small></div>
+          </div>
           <div class="img__in__slider">
             <img
               class="trailer_valet"
-              src="./img_products/trailer_valet/tvdjx2s/tvdjx2s.webp"
+              src="./img_products/trailer_valet/tvdjx2s/webpc-passthru (2).webp"
               alt="Image 1"
             />
           </div>
           <div class="product__description">
             <div><b class="valet_desctiption">Trailer Valet</b></div>
-            2,000 lbs Center Mounted Drill Jack <br />#TVDJX2C
+            2,000 lbs Center Mounted Drill Jack <br />#TVDJX2S
           </div>
         </div>
       </div>
@@ -68,7 +72,9 @@
 
       <div class="slider">
         <div class="container__slidse">
-          <div class="price">&#x24;9.<small>49</small></div>
+          <div class="price">
+            <div class="price_div">&#x24;9.<small>49</small></div>
+          </div>
           <div class="img__in__slider">
             <img
               src="./img_products/brake_pad_spreader_24400/brake_pad_spreader.png"
@@ -81,7 +87,9 @@
       <!--SLDER 2 KLEEN-FLO-->
       <div class="slider">
         <div class="container__slidse">
-          <div class="price">&#x24;3.<small>49</small></div>
+          <div class="price">
+            <div class="price_div">&#x24;3.<small>49</small></div>
+          </div>
           <div class="img__in__slider">
             <img
               class="for_rotate"
@@ -97,7 +105,9 @@
       <!--SLDER 3 GREASE MONKEY GLOVES-->
       <div class="slider">
         <div class="container__slidse">
-          <div class="price">&#x24;20<small></small></div>
+          <div class="price">
+            <div class="price_div">&#x24;20<small></small></div>
+          </div>
           <div class="img__in__slider">
             <img
               class="slider__2__img"
@@ -114,7 +124,9 @@
       <!--SLDER 3 BOSH QUIETCAST BRAKES-->
       <div class="slider">
         <div class="container__slidse">
-          <div class="price">&#x24;60<small></small></div>
+          <div class="price">
+            <div class="price_div">&#x24;60<small></small></div>
+          </div>
           <div class="img__in__slider">
             <img
               class="slider__2__img"
