--- a/index.html
+++ b/index.html
@@ -81,7 +81,9 @@
               alt="Image 1"
             />
           </div>
-          <div class="product__description">BRAKE PAD SPREADER #24400</div>
+          <div class="product__description">
+            BRAKE PAD SPREADER <br />#24400
+          </div>
         </div>
       </div>
       <!--SLDER 2 KLEEN-FLO-->
