--- a/index.html
+++ b/index.html
@@ -39,16 +39,21 @@
               alt="Image 1"
             />
           </div>
-          <div class="product__description">
-            <div><b class="valet_desctiption">Trailer Valet</b></div>
-            Tongue Jack Dolly with Crank Assist, 500 lb. <br />Tongue / 5,000
-            lb. <br />
-            #TV5X
+          <div class="container__product__description">
+            <div>
+              <p class="valet_desctiption">TRAILER VALET</p>
+              <p class="product__description">
+                Tongue Jack Dolly with Crank Assist, 500 lb.
+              </p>
+              <p class="product__description">Tongue / 5,000 lb.</p>
+              <p class="product__description">#TV5X</p>
+            </div>
           </div>
         </div>
       </div>
 
       <!--SLIDER TRAILER VALET 2-->
+
       <div class="slider">
         <div class="container__slidse">
           <div class="price">
@@ -61,9 +66,16 @@
               alt="Image 1"
             />
           </div>
-          <div class="product__description">
-            <div><b class="valet_desctiption">Trailer Valet</b></div>
-            2,000 lbs Center Mounted Drill Jack <br />#TVDJX2S
+          <div class="container__product__description">
+            <div class="valet_desctiption">TRAILER VALET</div>
+            <p class="product__description">
+              2,000 lbs Center Mounted Drill Jack
+            </p>
+            <p class="product__description">
+              Made from the highest quality materials. Designed for durability
+              with comfort
+            </p>
+            <p class="product__description">#TVDJX2S</p>
           </div>
         </div>
       </div>
@@ -81,8 +93,16 @@
               alt="Image 1"
             />
           </div>
-          <div class="product__description">
-            BRAKE PAD SPREADER <br />#24400
+          <div class="container__product__description">
+            <p class="product__description">BRAKE PAD SPREADER</p>
+            <p class="product__description">
+              Designed for compressing inner brake pads and resetting pistons
+              for easy pad replacement
+            </p>
+            <p class="product__description">#24400</p>
+            <!-- <div class="product__description__position">
+              BRAKE PAD SPREADER <br />#24400
+            </div> -->
           </div>
         </div>
       </div>
@@ -99,8 +119,16 @@
               alt="Image 1"
             />
           </div>
-          <div class="product__description">
-            KLEEN-FLO BRAKE KLEEN<br />#313
+          <div class="container__product__description">
+            <p class="product__description">KLEEN-FLO BRAKE KLEEN</p>
+            <p class="product__description">
+              Removes brake fluid, oil, grease, transmission fluid and other
+              contaminants
+            </p>
+            <p class="product__description">#313</p>
+            <!--  <div class="product__description__position">
+              KLEEN-FLO BRAKE KLEEN<br />#313
+            </div> -->
           </div>
         </div>
       </div>
@@ -117,8 +145,14 @@
               alt="Image 1"
             />
           </div>
-          <div class="product__description">
-            GREASE MONKEY NITRILE GLOVES<br />#5555PF
+          <div class="container__product__description">
+            <p class="product__description">GREASE MONKEY NITRILE GLOVES</p>
+            <p class="product__description">
+              Acid Resistant, Food Safe, Non-Slip Grip, Oil Resistant, Powder
+              Free, Puncture Resistant, Water Resistant
+            </p>
+
+            <p class="product__description">#5555PF</p>
           </div>
         </div>
       </div>
@@ -136,7 +170,15 @@
               alt="Image 1"
             />
           </div>
-          <div class="product__description">BOSH QUIETCAST BRAKES</div>
+          <div class="container__product__description">
+            <p class="product__description">BOSH QUIETCAST BRAKES</p>
+            <p class="product__description">
+              Next-generation friction for best-in-class performance
+            </p>
+            <!--   <div class="product__description__position">
+              BOSH QUIETCAST BRAKES
+            </div> -->
+          </div>
         </div>
       </div>
     </div>
