--- a/index.html
+++ b/index.html
@@ -26,6 +26,36 @@
   <body>
     <!--main slide presentation-->
     <div class="slider__body" id="slider_testing">
+      <!--SLIDER TBQ-->
+      <div class="slider">
+        <div class="container__slidse">
+          <div class="container-tbq">
+            <div class="tbq_brand">
+              <img
+                class="tbq"
+                src="./img_products/tbq/TBQ-TJ01500/TBQ-TJ01500-gb-20230622326.png"
+                alt="Image 1"
+              />
+            </div>
+
+            <div class="tbq_brand">
+              <img
+                class="tbq"
+                src="./img_products/tbq/TBQ-RCBT411121LGBK/TBQ-RCBT411121LGBK-bg-9094862456.png"
+                alt="Image 1"
+              />
+            </div>
+
+            <div class="tbq_brand">
+              <img
+                class="tbq"
+                src="./img_products/tbq/TBQ-UC300420//TBQ-UC300420-555777.png"
+                alt="Image 1"
+              />
+            </div>
+          </div>
+        </div>
+      </div>
       <!--SLIDER TRAILER VALET 1-->
       <div class="slider">
         <div class="container__slidse">
