--- a/index.html
+++ b/index.html
@@ -26,6 +26,20 @@
   <body>
     <!--main slide presentation-->
     <div class="slider__body" id="slider_testing">
+      <!--VIDEO TRAILER VALET-->
+      <div class="slider">
+        <div class="container__slidse">
+          <div>
+            <video autoplay muted loop id="autoplayVideo">
+              <source
+                class="tbq"
+                src="./img_products/trailer_valet/VID-20230608-WA0024.mp4"
+                type="video/mp4"
+              />
+            </video>
+          </div>
+        </div>
+      </div>
       <!--SLIDER TBQ-->
       <div class="slider">
         <div class="container__slidse">
@@ -238,6 +252,15 @@
           <img class="qr" src="./img_products/qr/qr_code.svg" alt="QR code" />
         </div>
       </div>
+    </div>
+    <div>
+      <video autoplay muted loop id="autoplayVideo">
+        <source
+          class="tbq"
+          src="./img_products/trailer_valet/VID-20230608-WA0024.mp4"
+          type="video/mp4"
+        />
+      </video>
     </div>
   </body>
 </html>
