--- a/index.html
+++ b/index.html
@@ -26,17 +26,25 @@
   <body>
     <!--main slide presentation-->
     <div class="slider__body" id="slider_testing">
-      <!--VIDEO TRAILER VALET-->
       <div class="slider">
         <div class="container__slidse">
-          <div>
-            <video autoplay muted loop id="autoplayVideo">
-              <source
-                class="tbq"
-                src="./img_products/trailer_valet/VID-20230608-WA0024.mp4"
-                type="video/mp4"
-              />
-            </video>
+          <div class="img__in__slider">
+            <img
+              class="trailer_valet"
+              src="./img_products/trailer_valet/tv5x/7839fc87-3c9d-42f6-88f6-dc58bf3e8779.eae3dda5f19ab080e734d7640d264e1b.jpeg"
+              alt="Image 1"
+            />
+          </div>
+          <div class="price">
+            <div class="price_div">&#x24;673.<small>56</small></div>
+          </div>
+          <div class="container__product__description">
+            <p class="valet_desctiption">TRAILER VALET</p>
+            <p class="product__description">
+              Tongue Jack Dolly with Crank Assist, 500 lb.
+            </p>
+            <p class="product__description">Tongue / 5,000 lb.</p>
+            <p class="product__description">#TV5X</p>
           </div>
         </div>
       </div>
@@ -252,15 +260,6 @@
           <img class="qr" src="./img_products/qr/qr_code.svg" alt="QR code" />
         </div>
       </div>
-    </div>
-    <div>
-      <video autoplay muted loop id="autoplayVideo">
-        <source
-          class="tbq"
-          src="./img_products/trailer_valet/VID-20230608-WA0024.mp4"
-          type="video/mp4"
-        />
-      </video>
     </div>
   </body>
 </html>
