--- a/index.html
+++ b/index.html
@@ -221,7 +221,7 @@
             <div class="price_div">&#x24;60<small></small></div>
           </div>
           <div class="container__product__description">
-            <p class="product__description">BOSH QUIETCAST BRAKES</p>
+            <p class="product__description">BOSCH QUIETCAST BRAKES</p>
             <p class="product__description">
               Next-generation friction for best-in-class performance
             </p>
