--- a/index.html
+++ b/index.html
@@ -237,7 +237,7 @@
 
     <!--footer-->
 
-    <div class="container_footer">
+    <!-- <div class="container_footer">
       <div class="footer_text">
         <div>
           220 Transport Road<br />
@@ -260,6 +260,6 @@
           <img class="qr" src="./img_products/qr/qr_code.svg" alt="QR code" />
         </div>
       </div>
-    </div>
+    </div> -->
   </body>
 </html>
