--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 
   <body>
     <!--main slide presentation-->
-    <div class="slider__body" id="slider_testing">
+    <!-- <div class="slider__body" id="slider_testing">
       <div class="slider">
         <div class="container__slidse">
           <div class="img__in__slider">
@@ -47,9 +47,9 @@
             <p class="product__description">#TV5X</p>
           </div>
         </div>
-      </div>
+      </div> -->
       <!--SLIDER TBQ-->
-      <div class="slider">
+      <!-- <div class="slider">
         <div class="container__slidse">
           <div class="container-tbq">
             <div class="tbq_brand">
@@ -77,7 +77,7 @@
             </div>
           </div>
         </div>
-      </div>
+      </div> -->
       <!--SLIDER TRAILER VALET 1-->
       <div class="slider">
         <div class="container__slidse">
