--- a/index.html
+++ b/index.html
@@ -25,8 +25,8 @@
 
   <body>
     <!--main slide presentation-->
-    <!-- <div class="slider__body" id="slider_testing">
-      <div class="slider">
+    <div class="slider__body" id="slider_testing">
+      <!-- <div class="slider">
         <div class="container__slidse">
           <div class="img__in__slider">
             <img
