--- a/index.html
+++ b/index.html
@@ -26,6 +26,22 @@
   <body>
     <!--main slide presentation-->
     <div class="slider__body" id="slider_testing">
+      <!--BBQ-->
+      <div class="slider">
+        <div class="container__slidse">
+          <div class="bbq__ctr__slide">
+            <img
+              class="bbq__ctr"
+              src="./img_products/bbq__ctr/358431307_711673957597084_3896810958289124876_n.jpg"
+              alt="Image 1"
+            />
+          </div>
+          <div class="container__product__description__grill">
+            <span>GRILL N` GREET</span>
+            <span>BBQ</span>
+          </div>
+        </div>
+      </div>
       <!--SLIDER TRAILER VALET 1-->
       <div class="slider">
         <div class="container__slidse">
