--- a/index.html
+++ b/index.html
@@ -37,8 +37,149 @@
             />
           </div>
           <div class="container__product__description__grill">
-            <span>GRILL N` GREET</span>
-            <span>BBQ</span>
+            <span class="grill_span">GRILL N` GREET</span>
+            <span class="grill_span">BBQ</span>
+          </div>
+        </div>
+      </div>
+
+      <!--SLDER NOKO GENIUS1-->
+       <div class="slider">
+        <div class="container__slidse">
+          <div class="img__in__slider">
+            <img
+              class="noco__img"
+              src="./img_products/noco/genius1/genius1.jpg"
+              alt="Image 1"
+            />
+          </div>
+          <div class="price">
+            <div class="price_div">&#x24;51.<small>46</small></div>
+          </div>
+          <div class="container__product__description">
+            <p class="product__description">
+             <p class="product__description" ><img src="./img_products/noco/logo_noco_try1.jpg" alt="logo_noco"></p>
+            </p>
+            <p class="product__description">
+              1A Car Battery Charger, 6V and 12V
+            </p>
+            <p class="product__description">Automotive Battery Charger</p>
+            <p class="product__description">
+              Battery Maintainer Trickle Charger and Desulfator for AGM
+            </p>
+          </div>
+        </div>
+      </div>
+
+      <!--SLDER NOKO GENIUSGB40 BOOST PLUS-->
+      <div class="slider">
+        <div class="container__slidse">
+          <div class="img__in__slider">
+            <img
+              class="noco__img"
+              src="./img_products/noco/gb40_boost_plus/gb40_boost_plus.jpg"
+              alt="Image 1"
+            />
+          </div>
+          <div class="price">
+            <div class="price_div">&#x24;153.<small>72</small></div>
+          </div>
+          <div class="container__product__description">
+            <p class="product__description">
+              <p class="product__description" ><img src="./img_products/noco/logo_noco_try1.jpg" alt="logo_noco"></p>
+            </p>
+            <p class="product__description">
+              1000 Amp 12-Volt UltraSafe Lithium Jump Starter Box
+            </p>
+            <p class="product__description">Car Battery Booster Pack</p>
+            <p class="product__description">Portable Power Bank Charger</p>
+          </div>
+        </div>
+      </div>
+
+      <!--SLDER NOKO GENIUS10-->
+      <div class="slider">
+        <div class="container__slidse">
+          <div class="img__in__slider">
+            <img
+              class="noco__img"
+              src="./img_products/noco/genius10/genius_10.jpg"
+              alt="Image 1"
+            />
+          </div>
+          <div class="price">
+            <div class="price_div">&#x24;165.<small>06</small></div>
+          </div>
+          <div class="container__product__description">
+            <p class="product__description">
+              <p class="product__description" ><img src="./img_products/noco/logo_noco_try1.jpg" alt="logo_noco"></p>
+            </p>
+            <p class="product__description">
+              10A Car Battery Charger, 6V and 12V Automotive Battery Charger
+            </p>
+            <p class="product__description">
+              Battery Maintainer, Trickle Charger and Desulfator for AGM
+            </p>
+            <p class="product__description">
+              Lithium, Motorcycle, Deep-Cycle and RV Batteries
+            </p>
+          </div>
+        </div>
+      </div>
+
+      <!--SLDER NOKO GB150-->
+      <div class="slider">
+        <div class="container__slidse">
+          <div class="img__in__slider">
+            <img
+              class="noco__img"
+              src="./img_products/noco/gb150/gb_150.jpg"
+              alt="Image 1"
+            />
+          </div>
+          <div class="price">
+            <div class="price_div">&#x24;456.<small>88</small></div>
+          </div>
+          <div class="container__product__description">
+            <p class="product__description">
+              <p class="product__description" ><img src="./img_products/noco/logo_noco_try1.jpg" alt="logo_noco"></p>
+            </p>
+            <p class="product__description">
+              Boost Pro GB150, 3000 Amp 12-Volt UltraSafe Lithium Jump Starter
+              Box
+            </p>
+            <p class="product__description">Car Battery Booster Pack</p>
+            <p class="product__description">Portable Power Bank Charger</p>
+          </div>
+        </div>
+      </div>
+
+      <!--SLDER NOKO GB70-->
+      <div class="slider">
+        <div class="container__slidse">
+          <div class="img__in__slider">
+            <img
+              class="noco__img"
+              src="./img_products/noco/gb70/gb_70.jpg"
+              alt="Image 1"
+            />
+          </div>
+          <div class="price">
+            <div class="price_div">&#x24;304.<small>57</small></div>
+          </div>
+          <div class="container__product__description">
+            <p class="product__description">
+              <p class="product__description" ><img src="./img_products/noco/logo_noco_try1.jpg" alt="logo_noco"></p>
+              
+            </p>
+            <p class="product__description">
+              Boost HD GB70 2000 Amp 12-Volt UltraSafe Lithium Jump Starter Box
+            </p>
+            <p class="product__description">Car Battery Booster Pack</p>
+            <p class="product__description">
+              Jumper Cables for up to 8-Liter Gasoline and 6-Liter Diesel
+              Engines
+            </p>
           </div>
         </div>
       </div>
