--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
     <!--main slide presentation-->
     <div class="slider__body" id="slider_testing">
       <!--BBQ-->
-      <div class="slider">
+     <!--  <div class="slider">
         <div class="container__slidse">
           <div class="bbq__ctr__slide">
             <img
@@ -41,7 +41,7 @@
             <span class="grill_span">BBQ</span>
           </div>
         </div>
-      </div>
+      </div> -->
 
       <!--SLDER NOKO GENIUS1-->
        <div class="slider">
