--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
     <!--main slide presentation-->
     <div class="slider__body" id="slider_testing">
       <!--BBQ-->
-     <!--  <div class="slider">
+      <!--  <div class="slider">
         <div class="container__slidse">
           <div class="bbq__ctr__slide">
             <img
@@ -44,7 +44,7 @@
       </div> -->
 
       <!--SLDER NOKO GENIUS1-->
-       <div class="slider">
+   <div class="slider">
         <div class="container__slidse">
           <div class="img__in__slider">
             <img
@@ -184,7 +184,7 @@
         </div>
       </div>
       <!--SLIDER TRAILER VALET 1-->
-      <div class="slider">
+       <div class="slider">
         <div class="container__slidse">
           <div class="img__in__slider">
             <img
@@ -209,7 +209,7 @@
 
       <!--SLIDER TRAILER VALET 2-->
 
-      <div class="slider">
+       <div class="slider">
         <div class="container__slidse">
           <div class="img__in__slider">
             <img
@@ -237,7 +237,7 @@
 
       <!--SLDER 1 BRAKE PAD SPREADER-->
 
-      <div class="slider">
+       <div class="slider">
         <div class="container__slidse">
           <div class="img__in__slider">
             <img
@@ -255,12 +255,62 @@
               for easy pad replacement
             </p>
             <p class="product__description">#24400</p>
-            <!-- <div class="product__description__position">
-              BRAKE PAD SPREADER <br />#24400
-            </div> -->
+         
           </div>
         </div>
       </div>
+
+      <!--SLDER 2 KLEEN-323-->
+      <div class="slider">
+        <div class="container__slidse">
+          <div class="img__in__slider">
+            <img
+              src="./img_products/kleen_flo/323/kleen_323-bg.png"
+              alt="Image 1"
+            />
+          </div>
+          <div class="price">
+            <div class="price_div">&#x24;162.<small>75</small></div>
+          </div>
+          <div class="container__product__description">
+            <p class="product__description">
+              CLEANER <br />
+              BRAKE AND PARTS
+            </p>
+            <p class="product__description">
+              cleaner for brakes and parts instantly removes brake fluid, oil,
+              grease, transmission fluid, brake dust, and other contaminants
+            </p>
+            <p class="product__description">#323</p>
+          </div>
+        </div>
+      </div>
+
+      <!--SLDER 2 KLEEN-885-->
+      <div class="slider">
+        <div class="container__slidse">
+          <div class="img__in__slider">
+            <img
+              class="for_rotate"
+              src="./img_products/kleen_flo/885/885-bg.png"
+              alt="Image 1"
+            />
+          </div>
+          <div class="price">
+            <div class="price_div">&#x24;6.<small>83</small></div>
+          </div>
+          <div class="container__product__description">
+            <p class="product__description">IDEAL FOR:</p>
+            <p class="product__description">
+              auto, marine, fleet and home use. Cleans windows, mirrors, formica
+              and porcelain. Specially formulated for body shops and industrial
+              use.
+            </p>
+            <p class="product__description">#885</p>
+          </div>
+        </div>
+      </div>
+
       <!--SLDER 2 KLEEN-FLO-->
       <div class="slider">
         <div class="container__slidse">
@@ -281,9 +331,6 @@
               contaminants
             </p>
             <p class="product__description">#313</p>
-            <!--  <div class="product__description__position">
-              KLEEN-FLO BRAKE KLEEN<br />#313
-            </div> -->
           </div>
         </div>
       </div>
